--- a/wordpress.html
+++ b/wordpress.html
@@ -1,11 +1,16 @@
-<html>
-    <head>
-        <title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>
             Wordpress
         </title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://kit.fontawesome.com/16a63e0e9b.js"></script>
-    </head>
+    
+</head>
     <body>
         <div class = "centre">
             <div class="center">
